force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/Apttus_Billing__BillingSystemProperties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Billing System properties. The record should be named as &quot;System Properties&quot;.</description>
    <label>Billing System Properties</label>
</CustomObject>