force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__AllowBillingPreferenceOverride__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AllowBillingPreferenceOverride__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether billing preferences may be overridden</description>
    <inlineHelpText>Indicates whether billing preferences may be overridden</inlineHelpText>
    <label>Allow Billing Preference Override</label>
    <type>Checkbox</type>
</CustomField>