force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__AlwaysApplyUsageMinimum__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AlwaysApplyUsageMinimum__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used by Billing to determine if usage minimum has to be applied for a billing period that has no usage</description>
    <inlineHelpText>Enable this flag if you need to apply usage minimum for a billing period that does not have any Usage Inputs</inlineHelpText>
    <label>Always Apply Usage Minimum</label>
    <type>Checkbox</type>
</CustomField>