force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__BillingOrgWideEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingOrgWideEmailAddress__c</fullName>
    <description>Display name of the Organization-Wide Email Address to be used for sending Invoice emails.</description>
    <inlineHelpText>Display name of the Organization-Wide Email Address to be used for sending Invoice emails.</inlineHelpText>
    <label>Billing Org-Wide Email Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>