force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__CreateActivityForBillingEmails__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CreateActivityForBillingEmails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to create activity records on Invoice/Credit Memo for emails sent.</description>
    <inlineHelpText>Check this box to create activity records on Invoice/Credit Memo for emails sent.</inlineHelpText>
    <label>Create Activity for Billing Emails</label>
    <type>Checkbox</type>
</CustomField>