force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__CreateRedundantBillingSchedules__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CreateRedundantBillingSchedules__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If a Billing Schedule has been invoiced and the user does a mid-cycle amend and the amount per period has not changed then still create a credit and a debit Billing Schedule, even though the credit and debit will be for the same amount and will cancel one another out.</description>
    <inlineHelpText>If a Billing Schedule has been invoiced and the user does a mid-cycle amend and the amount per period has not changed then still create a credit and a debit Billing Schedule, even though the credit and debit will be for the same amount and will cancel one</inlineHelpText>
    <label>Create redundant Billing Schedules</label>
    <type>Checkbox</type>
</CustomField>