force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__CreateSingleDeltaBillingSchedule__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CreateSingleDeltaBillingSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Option to only create a single delta Billing Schedule when changing the rate of an &quot;invoiced&quot; Billing Schedule mid-cycle.</description>
    <inlineHelpText>Option to only create single delta Billing Schedule when changing the rate of an &quot;invoiced&quot; Billing Schedule mid-cycle.</inlineHelpText>
    <label>Create Single Delta Billing Schedule</label>
    <type>Checkbox</type>
</CustomField>