force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__CreditMemoDisplayFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CreditMemoDisplayFields__c</fullName>
    <description>Comma separated invoice line item field API names that should be displayed on the credit memo page</description>
    <label>Credit Memo Display Fields</label>
    <type>TextArea</type>
</CustomField>