force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__CurrencyDecimalPlaces__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CurrencyDecimalPlaces__c</fullName>
    <defaultValue>5</defaultValue>
    <description>The number of Decimal Places to scale the Currency Fields in Single Currency Organization.</description>
    <inlineHelpText>The number of Decimal Places to scale the Currency Fields in Single Currency Organization.</inlineHelpText>
    <label>Currency Decimal Places</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>