force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__CustomBillingPlanItemPercentAPIName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CustomBillingPlanItemPercentAPIName__c</fullName>
    <description>Custom API name of Percent field of Billing Plan Item. This field will be used for calculating percent value of Billing Plan Item</description>
    <inlineHelpText>This field will be used for calculating percent value of Billing Plan Item</inlineHelpText>
    <label>Custom Billing PlanItem Percent API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>