force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__DeleteForecast__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DeleteForecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delete any Forecasted Billing Schedule when the Billing Schedules are created.</description>
    <inlineHelpText>If delete forecast is set to true, the forecast billing schedules linked to a proposal will be deleted as soon as the actual billing schedules are created. Do not check this box if you want to retain the forecast billing schedules linked to the proposal</inlineHelpText>
    <label>Delete Forecast</label>
    <type>Checkbox</type>
</CustomField>