force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__EvergreenRefreshBatchSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__EvergreenRefreshBatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>The batch size of Evergreen Refresh Job.</description>
    <inlineHelpText>The batch size of Evergreen Refresh Job.</inlineHelpText>
    <label>Evergreen Refresh Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>