force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__GenerateInvoiceDocuments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__GenerateInvoiceDocuments__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A flag used to control whether or not to create an Invoice Document (PDF, RTF, DOC, or DOCX) as part of Invoice Generation Batch Job. Documents will not be generated if this flag is unchecked.</description>
    <inlineHelpText>A flag used to control whether or not to create an Invoice Document (PDF, RTF, DOC, or DOCX) as part of Invoice Generation Batch Job. Documents will not be generated if this flag is unchecked.</inlineHelpText>
    <label>Generate Invoice Documents</label>
    <type>Checkbox</type>
</CustomField>