force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__HideBillingPlanTemplateOnBillingPlanPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__HideBillingPlanTemplateOnBillingPlanPage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Option to show or hide the button that will allow the user to create a Billing Plan Template from the Billing Plan creation page.</description>
    <inlineHelpText>Option to show or hide the button that will allow the user to create a Billing Plan Template from the Billing Plan creation page.</inlineHelpText>
    <label>Hide Bill Plan Template On Bill Plan</label>
    <type>Checkbox</type>
</CustomField>