force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__InvoiceEmailDeliveryPeriod__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceEmailDeliveryPeriod__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days prior to the Batch job run date (i.e Enter &quot;2&quot; to consider selecting all invoices generated from past 2 days if the batch job is running today)</description>
    <inlineHelpText>Number of days prior to the Batch job run date (i.e Enter &quot;2&quot; to consider selecting all invoices generated from past 2 days if the batch job is running today)</inlineHelpText>
    <label>Invoice Email Delivery Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>