force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__NoProrationOnRenewal__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__NoProrationOnRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to control whether the Start Date of Renewals are considered for alignment instead of using the Original Start Date. If checked, any future amendment will also consider the start date of the renewal for alignment irrespective of the billing calendar cycle.</description>
    <inlineHelpText>Flag to control whether the Start Date of Renewals are considered for alignment instead of using the Original Start Date.</inlineHelpText>
    <label>No Proration on Renewal</label>
    <type>Checkbox</type>
</CustomField>