force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__SameDayCancellation__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SameDayCancellation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking out Same Day Cancellation option will provide with behavior where cancellation will be done on same day, unchecking it will mean Cancellation will be using cancel day + 1 behavior.</description>
    <inlineHelpText>Checking out Same Day Cancellation option will provide with behavior where cancellation will be done on same day, unchecking it will mean Cancellation will be using cancel day + 1 behavior.</inlineHelpText>
    <label>Same Day Cancellation (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>