force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__TaxLevel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TaxLevel__c</fullName>
    <description>The default tax level.

Valid Values are:
=============

Account
Product</description>
    <inlineHelpText>The default tax level.

Valid Values are:
=============

Account
Product</inlineHelpText>
    <label>Tax Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>