force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__UpdateOrderId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__UpdateOrderId__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this flag will update the order id on Billing Schedules when the order line status is existing and the billing on the asset hasn&apos;t been impacted.</description>
    <inlineHelpText>Select this flag will update the order id on Billing Schedules when the order line status is existing and the billing on the asset hasn&apos;t been impacted.</inlineHelpText>
    <label>Update Order Id</label>
    <type>Checkbox</type>
</CustomField>