force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__UsageInputProcessingOrder__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__UsageInputProcessingOrder__c</fullName>
    <description>The order in which Usage Input gets processed via batch job. Valid values are &apos;Id&apos; and &apos;SystemModStamp&apos;.</description>
    <inlineHelpText>The order in which Usage Input gets processed via batch job. Valid values are &apos;Id&apos; and &apos;SystemModStamp&apos;</inlineHelpText>
    <label>Usage Input Processing Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>