force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__UsageMinimumFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__UsageMinimumFieldAPIName__c</fullName>
    <description>This field will be used by Billing during Schedule creation and Usage Rating</description>
    <inlineHelpText>Enter the API name of the custom field used to capture usage minimum fee</inlineHelpText>
    <label>Usage Minimum Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>