force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__UsageRatingBatchSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__UsageRatingBatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>The number of Usage Inputs to process per batch when rating Usage.</description>
    <inlineHelpText>The number of Usage Inputs to process per batch when rating Usage.</inlineHelpText>
    <label>Usage Rating Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>