force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__UsageRatingPriceFieldOverride__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__UsageRatingPriceFieldOverride__c</fullName>
    <description>This field will be used for usage rating instead of the List Price. If a Price Tier is defined, then this setting will be ignored.</description>
    <inlineHelpText>Enter the API name of the price field based on which usage will be rated.</inlineHelpText>
    <label>Usage Rating Price Field Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>