force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__ValidateUsageReversal__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ValidateUsageReversal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For a usage asset associated with a wallet (one-to-one relationship only), this will validate the usage processing entries where the negative amount (to be added back to the wallet) exceeds the wallet&apos;s consumed amount.</description>
    <inlineHelpText>Validate negative usage for an asset linked to a single wallet can not be processed if the rated amount is more then consumed amount.</inlineHelpText>
    <label>Validate Usage Reversal</label>
    <type>Checkbox</type>
</CustomField>