force-app/main/default/objects/Apttus_Billing__BillingSystemProperties__c/fields/Apttus_Billing__WalletFlow__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__WalletFlow__c</fullName>
    <description>Enter the name of the wallet manager flow that is configured in flow settings.</description>
    <inlineHelpText>Name of the wallet manager flow.</inlineHelpText>
    <label>WalletFlow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>